--- a/index.html
+++ b/index.html
@@ -9,6 +9,22 @@
     <link rel="stylesheet" href="css/app.css">
 </head>
 <body>
+  <div class="overlay">
+    <div class="modal-frame">
+      <div class="title-bg">
+        <h1 class="title">You've Won!</h1>
+      </div>
+      <div class="game-details">
+        <span class="game-data">Moves Made:</span>
+        <span class="game-data">Game Time:</span>
+        <span class="game-data">Star Rating:</span>
+      </div>
+      <div class="button-actions">
+        <button class="button-close">Close</button>
+        <button class="button-replay">Replay</button>
+      </div>
+    </div>
+  </div>
 
     <div class="container">
         <header>
@@ -20,13 +36,9 @@
         		<li><i class="fa fa-star"></i></li>
         		<li><i class="fa fa-star"></i></li>
         		<li><i class="fa fa-star"></i></li>
-            <li><i class="fa fa-star"></i></li>
-            <li><i class="fa fa-star"></i></li>
         	</ul>
 
-        	<span class="moves">0</span> Moves
-
-          <span class="clock">0:00</span>
+        	<span class="moves">3</span> Moves
 
             <div class="restart">
         		<i class="fa fa-repeat"></i>
