Added hide for modal and overlay

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="css/app.css">
 </head>
 <body>
-  <div class="overlay">
-    <div class="modal-frame">
+  <div class="overlay hide">
+    <div class="modal-frame hide">
       <div class="title-bg">
         <h1 class="title">You've Won!</h1>
       </div>
