renamed classes for game details to be more descriptive

--- a/index.html
+++ b/index.html
@@ -11,14 +11,17 @@
 <body>
   <div class="overlay hide">
     <div class="modal-frame hide">
+
       <div class="title-bg">
         <h1 class="title">You've Won!</h1>
       </div>
+
       <div class="game-details">
-        <span class="game-data">Moves Made:</span>
-        <span class="game-data">Game Time:</span>
-        <span class="game-data">Star Rating:</span>
+        <span class="total-moves">Moves Made:</span>
+        <span class="total-time">Game Time:</span>
+        <span class="total-stars">Star Rating:</span>
       </div>
+
       <div class="button-actions">
         <button class="button-close">Close</button>
         <button class="button-replay">Replay</button>
